--- a/lancer/package.json
+++ b/lancer/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "eslint-plugin-react-hooks": "^3.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
@@ -22,7 +23,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+	    "react-app",
+    	    "plugin:react-hooks/recommended"
+    ]
   },
   "browserslist": {
     "production": [
