--- a/lancer/package.json
+++ b/lancer/package.json
@@ -5,8 +5,6 @@
   "dependencies": {
     "@material-ui/core": "^4.9.8",
     "@material-ui/styles": "^4.9.6",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "eslint-plugin-react-hooks": "^3.0.0",
@@ -19,13 +17,13 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
-	    "react-app",
-    	    "plugin:react-hooks/recommended"
+      "react-app",
+      "plugin:react-hooks/recommended"
     ]
   },
   "browserslist": {
@@ -41,7 +39,23 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "babel-core": "^6.26.3",
     "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^6.2.2"
+    "eslint-plugin-vue": "^6.2.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "24.9.0",
+    "react-test-render": "^1.1.2",
+    "react-test-renderer": "^16.13.1",
+    "regenerator-runtime": "^0.13.5"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "identity-obj-proxy"
+    }
   }
 }
