--- a/lancer/package.json
+++ b/lancer/package.json
@@ -44,6 +44,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "babel-core": "^6.26.3",
+    "cypress": "^4.5.0",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
     "identity-obj-proxy": "^3.0.0",
